# r_fista

./: .gitignore  plot_group_lasso.ipynb  pyproject.toml
src/r_fista/: fista.py  helper_fns.py  loss_fns.py  prox.py  regularizers.py
