[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r_fista"
version = "0.0.1-beta"
authors = [
  { name="Aaron Mishkin", email="amishkin@cs.stanford.edu" },
]
description = "Implementation of restart FISTA for composite optimization problems."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.3",
    "scipy>=1.7.2",
    "typing_extensions",
    "tqdm",
]

[tool.setuptools.package-data]
scnn = ["py.typed"]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""
